<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.myapplication.ui.proveedor.ProveedorFragment"
        android:label="@string/menu_proveedor"
        tools:layout="@layout/fragment_proveedor" />

    <fragment
        android:id="@+id/nav_galeria"
        android:name="com.example.myapplication.ui.galeria.GaleriaFragment"
        android:label="@string/menu_galeria"
        tools:layout="@layout/fragment_galeria" />

    <fragment
        android:id="@+id/nav_musica"
        android:name="com.example.myapplication.ui.musica.MusicaFragment"
        android:label="@string/menu_musica"
        tools:layout="@layout/fragment_musica" />
</navigation>
